--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -194,7 +194,7 @@
     /* position: relative;
     top: 10px; */
     border-radius: 40px;
-    background-color: #d5d5d5;
+    background-color: white;
   }
   .buttonn {
     display: flex;
