--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -224,45 +224,51 @@
   background-color: #f9f9f9;
   display: flex;
   justify-content: space-around;
-  width: 400px;
+  /* width: 400px; */
   padding-top: 5%;
 }
 .cart-box{
   width: 100%;
   display: flex;
   padding: 10px;
+  justify-content: start;
 }
 .cart-items{
   display: flex;
 }
-.cart-items > img{
+.cart-items>img {
   border-radius: 20px;
-  width: 20%;
+  width: 52%;
+  height: 100%;
 }
-.cartInput{
-  display: flex;
+.carTInput {
   align-items: center;
-  height: 8vmax;
-  padding: 0vmax 0vmax;
+  display: flex;
+  height: 10vmax;
+  width: 100%;
+  padding: 10px;
 }
-.cartInput > button{
+.carTInput>button {
+  background-color: rgba(0,0,0,.616);
   border: none;
-  background-color: rgba(0, 0, 0, 0.616);
-  padding: 0.2vmax;
+  color: #fff;
   cursor: pointer;
-  color: white;
-  transition: all 0.5s ease-in-out;
+  padding: 7px;
+  transition: all .5s ease-in-out;
 }
-.cartInput > button:hover{
+.carTInput > button:hover{
   background-color: rgba(0, 0, 0, 0.767);
 }
-.cartInput > input {
+.carTInput > input {
   border: none;
   padding: 0.5vmax;
   width: 32px;
   text-align: center;
   font: 300 1.3vmax "Roboto";
   color: black;
+}
+.MuiPaper-root{
+  width: 40% !important;
 }
 @media screen and (max-width: 1537px) {
   .popupStyle  {
