--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -228,17 +228,17 @@
   padding-top: 5%;
 }
 .cart-box{
-  width: 100%;
+  width: 70%;
   display: flex;
   padding: 10px;
-  justify-content: start;
+  justify-content: space-evenly;
 }
 .cart-items{
   display: flex;
 }
 .cart-items>img {
   border-radius: 20px;
-  width: 42%;
+  width: 22%;
   height: 100%;
 }
 .carTInput {
