--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -232,6 +232,7 @@
   display: flex;
   padding: 10px;
   justify-content: space-evenly;
+  align-items: center;
 }
 .cart-items{
   display: flex;
@@ -239,7 +240,7 @@
 .cart-items>img {
   border-radius: 20px;
   width: 22%;
-  height: 100%;
+  height: 60%;
 }
 .carTInput {
   align-items: center;
@@ -284,7 +285,7 @@
 }
 
 .cartgrossBox{
-  /* border-top:3px solid tomato ; */
+  border-top:3px solid tomato ;
   box-sizing: border-box;
   font:300 1.7vmax "Roboto";
   display: flex;
