--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -228,7 +228,7 @@
   padding-top: 5%;
 }
 .cart-box{
-  width: 70%;
+  width: 100%;
   display: flex;
   padding: 10px;
   justify-content: space-evenly;
@@ -236,6 +236,7 @@
 }
 .cart-items{
   display: flex;
+  align-items: center;
 }
 .cart-items>img {
   border-radius: 20px;
@@ -245,9 +246,9 @@
 .carTInput {
   align-items: center;
   display: flex;
-  height: 10vmax;
-  width: 100%;
+  height: 5vmax;
   padding: 10px;
+  width: 50%;
 }
 .carTInput>button {
   background-color: rgba(0,0,0,.616);
@@ -256,6 +257,7 @@
   cursor: pointer;
   padding: 7px;
   transition: all .5s ease-in-out;
+  margin: 0.3vmax;
 }
 .carTInput > button:hover{
   background-color: rgba(0, 0, 0, 0.767);
