--- a/src/component/product/product.css
+++ b/src/component/product/product.css
@@ -120,8 +120,15 @@
     max-height: 100% !important;
   }
 .MuiDialog{
-    width: 92% !important ;
-    height: 100% !important;
+  position: fixed;
+  height: 30vh;
+  width: 88%!important;
+  background-color: whitesmoke;
+  top: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   }
 .dialogContentRow .image {
   flex: 0 0 auto;
