--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -250,7 +250,7 @@
   padding: 10px;
   width: 50%;
 }
-.carTInput>button {
+.carTInput> .drawerinput >button {
   background-color: rgba(0,0,0,.616);
   border: none;
   color: #fff;
@@ -259,10 +259,10 @@
   transition: all .5s ease-in-out;
   margin: 0.3vmax;
 }
-.carTInput > button:hover{
+.carTInput > .drawerinput >button:hover{
   background-color: rgba(0, 0, 0, 0.767);
 }
-.carTInput > input {
+.carTInput> .drawerinput > input {
   border: none;
   padding: 0.5vmax;
   width: 32px;
