--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -237,6 +237,7 @@
 .cart-items{
   display: flex;
   align-items: center;
+  justify-content: space-around;
 }
 .cart-items>img {
   border-radius: 20px;
@@ -249,6 +250,7 @@
   height: 5vmax;
   padding: 10px;
   width: 50%;
+  flex-direction: column;
 }
 .carTInput > a  {
   color: black;
@@ -267,7 +269,7 @@
   font-size: 1.6vmax;
 }
 .carTInput > .drawerinput >button:hover{
-  background-color: rgba(0, 0, 0, 0.767);
+  background-color: rgba(241, 241, 241, 0.767);
 }
 .carTInput>.drawerinput>input {
   border: none;
