--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -224,8 +224,10 @@
   background-color: #f9f9f9;
   display: flex;
   justify-content: space-around;
-  /* width: 400px; */
   padding-top: 5%;
+  height: 90px;
+  margin-bottom: 18px;
+  border-bottom: solid 1px lightgray;
 }
 .drawer >p {
   font:400 1.2vmax "Roboto" ;
@@ -288,6 +290,15 @@
   padding: 0.5vmax;
   text-align: center;
   width: 32px;
+}
+.drawerinput > Link{
+  background-color: #ce1710;
+  color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+.drawerinput >Link:hover{
+  transform: scaleY(1.1vmax);
+  background-color: red;
 }
 .MuiPaper-root{
   width: 25% !important;
