--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -291,12 +291,12 @@
   text-align: center;
   width: 32px;
 }
-.drawerinput > Link{
+.drawer-link > Link{
   background-color: #ce1710;
   color: #fff;
   transition: all 0.3s ease-in-out;
 }
-.drawerinput >Link:hover{
+.drawer-link >Link:hover{
   transform: scaleY(1.1vmax);
   background-color: red;
 }
