--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -398,9 +398,18 @@
         width: 16%;
         justify-content: space-evenly;
       }
-      
+      .cartGross {
+        bottom: 60px;
+        position: absolute;
+        width: 100%;
+    }
 }
 @media screen and (max-width:1170px) {
+  .cartGross {
+    bottom: 60px;
+    position: absolute;
+    width: 100%;
+}
   .carTInput > a  {
     color: black;
     text-decoration: none;
@@ -457,6 +466,35 @@
       }
 }
 @media screen and (max-width:950px) {
+  .cartGross {
+    bottom: 60px;
+    position: absolute;
+    width: 100%;
+}
+.carTInput > a  {
+  color: black;
+  text-decoration: none;
+  font: 400 1.1vmax "Roboto";
+}
+.MuiPaper-root{
+  width: 40% !important;
+}
+.cart-items>img {
+  border-radius: 20px;
+  height: 60%;
+  width: 30%;
+}
+.carTInput>.drawerinput>button {
+background-color: initial;
+border: none;
+color: #7d7d7d;
+cursor: pointer;
+font-size: 2.7vmax;
+height: 39px;
+margin: 0.3vmax;
+padding: 0 16px;
+transition: all .5s ease-in-out;
+}
   .pppp  {
     position: fixed;
     background: rgba(0, 0, 0, 0.314);
