--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -641,9 +641,14 @@ transition: all .5s ease-in-out;
         right: 0vmax;
       }
 }
-
 @media screen and (max-width:650px) {
   .MuiPaper-root{
     width: 60% !important;
+  }
+}
+
+@media screen and (max-width:450px) {
+  .MuiPaper-root{
+    width: 100% !important;
   }
 }
